<resources>
    <string name="app_name">EcommerceApp</string>


    <!--Strings da tela principal-->
    <string name="categorias_populares">Categorias Populares</string>
    <string name="produtos_recentes">Produtos Recentes</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comprar">Comprar</string>
    <string name="descri_o">Descrição</string>
    <string name="home">Home</string>
    <string name="minha_conta">Minha conta</string>
    <string name="sair">Sair</string>
    <string name="carrinho">Carrinho</string>
    <string name="compras">Minhas Compras</string>
    <string name="category">Categorias</string>
    <string name="toggle_open">open</string>
    <string name="toggle_close">close</string>
    <string name="product_detail_cor">Cor</string>
    <string name="product_detail_tamanho">Tamanho</string>
    <string name="catecorias">Catecorias</string>
    <string name="sub_titulo">Sub-titulo</string>
    <string name="titulo">Titulo</string>


    <string name="cadastar">Cadastar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="user_register_title">Cadastro de Usuário</string>


    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="user_login">Entrar</string>
    <string name="cadastre_se_aqui">Cadastre-se aqui</string>
    <string name="n_o_tem_cadastro">Não tem cadastro?</string>
    <string name="nome">Nome</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="complemento_apartamento_bloco">Complemento Apartamento/Bloco</string>
    <string name="n_mero">Número</string>
    <string name="rua_avenida">Rua/Avenida</string>
    <string name="endere_o">Endereço</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="Perfil">Meu Perfil</string>
    <string name="categorias">Categorias</string>
    <string name="camisetas">Camisetas</string>


    <string-array name="states">
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">Produtos</string>
    <string name="settings_title">Configurações</string>
    <string name="nav_settings_tittle">Configurações</string>
    <string name="nav_settings_title">Configurações</string>
    <string name="Configurações">Configurações</string>
    <string name="cart_title">Meu Carrinho</string>
    <string name="order_title">Minhas Compras</string>
    <string name="login_message">Email e/ou senha inválidos</string>

</resources>