<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/nav_account"
        android:title="@string/minha_conta"
        android:icon="@drawable/ic_menu_user"/>

    <item android:id="@+id/nav_category"
        android:title="@string/categorias"
        android:icon="@drawable/ic_menu_category"/>

    <item android:id="@+id/nav_orders"
        android:title="@string/compras"
        android:icon="@drawable/ic_menu_orders"/>

    <item android:id="@+id/nav_cart"
        android:title="@string/carrinho"
        android:icon="@drawable/ic_menu_cart"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/nav_settings_title"
        android:icon="@drawable/ic_menu_settings"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/sair"
        android:icon="@drawable/ic_menu_logout"/>

</menu>